tests/snapshots/run_wpt_conformance__onnx_gather_float16_4D_tensor_and_2D_indices_explict_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float16 4D tensor and 2D indices explict options.axis=0",
    "onnx",
    "PASS",
)
